anidacion en scss de todas las paginas

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LaManoDelTarot | Lectura de cartas y suerte</title>
     <!--LINK BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <!---<link rel="stylesheet" href="../css/style.css"> --->
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -32,7 +34,7 @@
                             <a class="nav-link" href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./agenda.html">Agenda</a>
+                            <a class="nav-link" href="./agenda.html">Horóscopo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#redes">Redes</a>
@@ -59,6 +61,35 @@
             <a href="" class="boton">Consultame estoy ON-LINE</a>
         </section>
 
+        <section class="pag-servicios-1">   
+            <h3>    
+             MIS SERVICIOS
+            </h3>
+            <p> Ofrezco mis servicios de manera On-line y presencial, los dos con un 100% de efectividad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas reprehenderit odio officia amet tempore, nesciunt omnis repellendus exercitationem voluptatem aliquam incidunt delectus aperiam explicabo recusandae fuga beatae iusto laudantium ipsam.</p>
+        </section>
+        <section class="pag-servicios-2">
+            <div>
+                <img src="../img/carta2.jpg" alt="cartas de tarot">
+                <h4>Tarot</h4>
+                <p>Realizo lectura de cartas de tarot para que puedas sacarte todas las dudas</p>
+            </div>
+            <div>
+                <img src="../img/limpieza.jpg" alt="palo santo">
+                <h4>Limpieza Espiritual</h4>
+                <p>Es posible realizar una limpieza de tu alma, espíritu o cualquier lugar </p>
+            </div>
+            <div>
+                <img src="../img/unionparejas.jpg" alt="manos unidas">
+                <h4>Unión de Parejas</h4>
+                <p>¿Te separaste y necesitas que tu amor regrese? o ¿Estas enamorado y no lo estan de tí?</p>
+            </div>
+            <div>
+                <img src="../img/dinero.jpg" alt="billetes">
+                <h4>Dinero</h4>
+                <p>¿Tenes problemas con el dinero? Necesitas un ritual de abundancia y todo quedará resuelto</p>
+            </div>
+        </section>
+
     </main>
 
 
@@ -70,9 +101,9 @@
 
     <footer id="redes">
         <a href="../index.html"><img src="../img/carta_1-removebg-preview (1).png" alt="Mano de logo"></a>
-        <img src="../img/instagram.png" alt="Logo instagram">
-        <img src="../img/facebook.png" alt="Logo facebook">
-        <img src="../img/gorjeo.png" alt="Logo twitter">
+        <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Logo instagram"></a>
+        <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="../img/facebook.png" alt="Logo facebook"></a>
+        <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/gorjeo.png" alt="Logo twitter"></a>
     </footer>
     <!--LINK BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
