--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Estamos para ayudarte a resolver cualquier problema.Tarot, videncia, amarres, unión de parejas, limpiezas, cortes, abundancia o lo que necesites">
+  <meta name="keywords" content="cartas, tarot, amor, limpieza">
   <!--Link bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <!--Link css-->
-  <link rel="stylesheet" href="./css/style.css">
-  <title>LaManoDelTarot</title>
+ <!--<link rel="stylesheet" href="./css/style.css"> -->
+  <!--Link de estilos.css-->
+  <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <title>LaManoDelTarot | Lectura de cartas y suerte</title>
 </head>
 
 <body>
@@ -32,16 +38,16 @@
               <a class="nav-link active" aria-current="page" href="./pages/nosotras.html">Nosotras</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Servicios</a>
+              <a class="nav-link" href="./pages/servicios.html">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Agenda</a>
+              <a class="nav-link" href="./pages/agenda.html">Horóscopo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#redes">Redes</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="./pages/productos.html" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Productos
               </a>
@@ -67,7 +73,7 @@
 
     <section class="elegirme">
       <div>
-        <h2>¿Por qué elegirme?</h2>
+        <h2 class="animate__animated animate__bounce animate__backInLeft">¿Por qué elegirme?</h2>
         <p class="parrafo">Mi experiencia como tarotista y vidente te ayudará a resolver tus inquietudes y
           problemas. Confía en
           mi tarot para tomar decisiones en tu vida, especialmente las relacionadas con los sentimientos y la
@@ -128,7 +134,7 @@
       </div>
       <a href=""><img src="./img/velas.webp" alt="velas y espejos"></a>
     </section>
-
+    <!--BOOTSTRAP-->
     <div class="accordion" id="accordionPanelsStayOpenExample">
       <div class="accordion-item">
         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -224,9 +230,9 @@
 
   <footer id="redes">
     <a href="./index.html"><img src="./img/carta_1-removebg-preview (1).png" alt="Mano y carta"> </a>
-    <img src="./img/instagram.png" alt="Logo instagram">
-    <img src="./img/facebook.png" alt="Logo facebook">
-    <img src="./img/gorjeo.png" alt="Logo twitter">
+    <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png" alt="Logo instagram" ></a>
+    <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="./img/facebook.png" alt="Logo facebook"></a>
+    <a href="https://twitter.com/?lang=es" target="_blank"><img src="./img/gorjeo.png" alt="Logo twitter"></a>
   </footer>
   <!--Link bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
