--- a/pages/nosotras.html
+++ b/pages/nosotras.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LaManoDelTarot | Lectura de cartas y suerte</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <!--<link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    
 </head>
 
 <body>
@@ -31,7 +34,7 @@
                             <a class="nav-link" href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./agenda.html">Agenda</a>
+                            <a class="nav-link" href="./agenda.html">Horóscopo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#redes">Redes</a>
@@ -52,60 +55,67 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="nosotras-generales">
         <section class="hero">
             <h2>Vidente y tarotista profesional</h2>
             <a href="" class="boton">Consultame estoy ON-LINE</a>
         </section>
-        <section>
-            <form action="" method="" enctype="">
-                <div>
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" name="nombre" id="nombre">
-                </div>
-                <div>
-                    <label for="apellido">Apellido:</label>
-                    <input type="text" id="apellido">
-                </div>
-                <div>
-                    <label for="">Email:</label>
-                    <input type="email" id="email">
-                </div>
-                <div>
-                    <label for="contrasenia">Contraseña</label>
-                    <input type="password" id="contraseña">
-                </div>
-                <div>
-                    <label for="">Género</label>
-                    <div>
-                        <label for="masculino">Masculino</label>
-                        <input type="radio" name="genero">
-                        <label for="femenino">Femenino</label>
-                        <input type="radio" name="genero">
-                        <label for="otro">Otro</label>
-                        <input type="radio" name="genero">
-                    </div>
+        <h3>NOSOTRAS </h3>
+        <section class="pag-nosotras">  
+            <section class="pag-nosotras-1">   
+                <p class="nosotras">¿QUERÉS CONOCERNOS?</p>
+                <p>En <span>LA MANO DEL TAROT</span> trabajamos 5 chicas, Sabrina, Aurora, Rocío, Micaela y Yoyi. Somos personas como vos y con los mismos problemas,inquietudes o dudas que vos, con la diferencia que nacimos con un <span>DON NATURAL</span> y somos capaces de ayudarte o guiarte para que todo lo negativo se aleje de vos.
+                    Dejanos tus datos junto a tu mensaje o pasá a visitarnos y <span>¡Dale vida al cambio que estas buscando!</span>
+                </p>
+            </section>
 
-                </div>
-                <div>
-                    <label for="">País</label>
-                    <select name="" id="">
-                        <option value="">Argentina</option>
-                        <option value="">Brasil</option>
-                        <option value="">España</option>
-                        <option value="">EeUu</option>
-                    </select>
-                </div>
-                <div>
-                    <label for="">Escribí tu comentario</label>
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
-                </div>
-                <div>
-                    <input type="submit">
-                    <input type="reset">
-                </div>
-            </form>
+            <section class="nosotras-datos">
+                <form action="" method="" enctype="">
+                    <div>
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" name="nombre" id="nombre">
+                    </div>
+                    <div>
+                        <label for="apellido">Apellido:</label>
+                        <input type="text" id="apellido">
+                    </div>
+                    <div>
+                        <label for="">Email:</label>
+                        <input type="email" id="email">
+                    </div>
+                    <div>
+                        <label for="">Género:</label>
+                        <div>
+                            <label for="masculino">Masculino</label>
+                            <input type="radio" name="genero">
+                            <label for="femenino">Femenino</label>
+                            <input type="radio" name="genero">
+                            <label for="otro">Otro</label>
+                            <input type="radio" name="genero">
+                        </div>
+
+                    </div>
+                    <div>
+                        <label for="">País</label>
+                        <select name="" id="">
+                            <option value="">Argentina</option>
+                            <option value="">Brasil</option>
+                            <option value="">España</option>
+                            <option value="">EeUu</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="">Escribí tu comentario</label>
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                    </div>
+                    <div>
+                        <!--CLASE DE BOOTSTRAP-->
+                        <button type="button" class="btn btn-outline-danger">Enviar</button>
+                        <button type="button" class="btn btn-outline-danger">Borrar</button>
+                    </div>
+                </form>
         </section>
+        
         <section>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2321.738389666553!2d-58.37465906197034!3d-34.61847333214249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbd8e78b0a89%3A0x6d877a680995eaa!2sAtis%20Bar!5e0!3m2!1ses!2sar!4v1709841667716!5m2!1ses!2sar"
@@ -113,17 +123,17 @@
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </section>
-
+    </section>
     </main>
     <div class="fixed">
         <a href="./agenda.html"><img src="../img/whatsapp.png" alt="Logo whatsapp"></a>
     </div>
 
-    <footer>
+    <footer id="redes">
         <a href="../index.html"><img src="../img/carta_1-removebg-preview (1).png" alt="Mano de logo"></a>
-        <img src="../img/instagram.png" alt="Logo instagram">
-        <img src="../img/facebook.png" alt="Logo facebook">
-        <img src="../img/gorjeo.png" alt="Logo twitter">
+        <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Logo instagram"></a>
+        <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="../img/facebook.png" alt="Logo facebook"></a>
+        <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/gorjeo.png" alt="Logo twitter"></a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
