--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LaManoDelTarot | Lectura de cartas y suerte</title>
     <!--LINK BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+   <!---- <link rel="stylesheet" href="../css/style.css"> --->
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -32,7 +34,7 @@
                             <a class="nav-link" href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./agenda.html">Agenda</a>
+                            <a class="nav-link" href="./agenda.html">Horóscopo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#redes">Redes</a>
@@ -64,28 +66,28 @@
         </section>
         <section class="galeria">   
             <div class="grid-item cartas"> 
-                <img src="../img/comprar-cartas.webp" alt="">  
-                <h3>Comprar</h3>
+                <img src="../img/comprar-cartas.webp" alt="mazo d cartas">  
+                <h5>Comprar</h5>
             </div>
             <div class="grid-item velas">   
-                <img src="../img/comprar-velas.jpg" alt="">  
-                <h3>Comprar</h3>
+                <img src="../img/comprar-velas.jpg" alt="velas">  
+                <h5>Comprar</h5>
             </div>
             <div class="grid-item libros">   
-                <img src="../img/comprar-libro.webp" alt="">  
-                <h3>Comprar</h3>
+                <img src="../img/comprar-libro.webp" alt="libro de tarot">  
+                <h5>Comprar</h5>
             </div>
             <div class="grid-item mantas">   
-                <img src="../img/manta-comprar.webp" alt="">  
-                <h3>Comprar</h3>
+                <img src="../img/manta-comprar.webp" alt="manta">  
+                <h5>Comprar</h5>
             </div>
             <div class="grid-item piedras">   
-                <img src="../img/comprar-piedras.jpg" alt="">  
-                <h3>Comprar</h3>
+                <img src="../img/comprar-piedras.jpg" alt="piedras energeticas">  
+                <h5>Comprar</h5>
             </div>
             <div class="grid-item cristal">   
-                <img src="../img/comprar-bola-de-cristal.webp" alt="">  
-                <h3>Comprar</h3>
+                <img src="../img/comprar-bola-de-cristal.webp" alt="bola de cristal">  
+                <h5>Comprar</h5>
             </div>
         </section>
 
@@ -97,9 +99,9 @@
 
     <footer id="redes">
         <a href="../index.html"><img src="../img/carta_1-removebg-preview (1).png" alt="Mano de logo"></a>
-        <img src="../img/instagram.png" alt="Logo instagram">
-        <img src="../img/facebook.png" alt="Logo facebook">
-        <img src="../img/gorjeo.png" alt="Logo twitter">
+        <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="Logo instagram"></a>
+        <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="../img/facebook.png" alt="Logo facebook"></a>
+        <a href="https://twitter.com/?lang=es" target="_blank"><img src="../img/gorjeo.png" alt="Logo twitter"></a>
     </footer>
     <!--LINK BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
