modificacion de formulario, media-queries

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
  <!--<link rel="stylesheet" href="./css/style.css"> -->
   <!--Link de estilos.css-->
   <link rel="stylesheet" href="./css/estilos.css">
+  <!--Link animacion-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <!--Link favicon-->
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <!--Link scroll-->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>LaManoDelTarot | Lectura de cartas y suerte</title>
 </head>
 
