--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Estamos para ayudarte a resolver cualquier problema.Tarot, videncia, amarres, unión de parejas, limpiezas, cortes, abundancia o lo que necesites">
+    <meta name="keywords" content="cartas, tarot, amor, limpieza">
     <title>LaManoDelTarot | Lectura de cartas y suerte</title>
     <!--LINK BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
